Version 3.8.5
- Improve inline assembly: allow labels
- Fix string constants in case labels (they should be treated as
  lists)
- Big revision of how listing files are created. This is worse for all
  assembly files (DAT section output is a bit weaker) but much better
  for regular Spin files, which can now have listing files.
- Add a check for recursive symbol definition

Version 3.8.4
- Automatically promote literal strings to string("foo") if they are
  being passed to a function that expects a pointer
- Fixed lockset() on P2 (C flag behavior differs between P1 and P2)
- Changed default hub start for P2 from $800 to $400
- Provide some inline assembly support for C/C++

Version 3.8.3
- Allow multiple return values to in turn be passed to functions as
  parameters
- Allow default values for parameters. So far these must be constant
- added Spin2 <=>, \, and XOR operators
- Fixed a CSE bug with loops containing multiple assignments

Version 3.8.2
- Added warning for instructions that should set C or Z flags not
  doing so

Version 3.8.1
- Added -l flag to fastspin to produce a listing file
- Fixed multiple returns from functions with no parameters
- Added pusha, pushb, modc, modz aliases for P2 instructions
- Various fixes for P2 binary output

Version 3.8.0
- Added multiple assignments like (x,y) := (y,x)
- Added ability for functions to return multiple values
- Made the preprocessor work correctly with Mac encoded files (CR for
  end of line)
- Made fastspin -w work correctly in P2 mode
- if fastspin is named something ending with "spin2" (like
  "fastspin2") then it will start in Propeller2 mode by default
- if no Spin methods are present, do not emit any of the Spin
  initialization code, just output the DAT section 
- simplified parsing of \ expressions

Version 3.7.2
- Updated P2 support to v32
- Fixed some bugs in common subexpression elimination
- Made the --nocse flag to spin2cpp actually work
- Fixed labels at end of input