@@ -5,6 +5,7 @@ Version 3.8.5
 - Big revision of how listing files are created. This is worse for all
   assembly files (DAT section output is a bit weaker) but much better
   for regular Spin files, which can now have listing files.
+- Fixed coginit of Spin methods in P2
 - Add a check for recursive symbol definition
 
 Version 3.8.4
